<resources>
    <string name="app_name">Loginapp</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="student_registration">STUDENT REGISTRATION</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="comfirm_password">Comfirm Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="send">Send</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="enter_email">Enter Email</string>
</resources>
