<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout
    xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height = "match_parent"
    tools:context = ".register">

    <TextView
        android:id = "@+id/treg"
        android:text = "@string/student_registration"
        android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:textSize = "25sp"
        android:gravity="center"
        android:layout_marginTop = "100dp"
        android:layout_alignParentTop = "true"
        android:layout_centerHorizontal = "true"/>

    <EditText
        android:id="@+id/fname"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/treg"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="-78dp"
        android:layout_marginRight="-78dp"
        android:layout_toStartOf="@+id/treg"
        android:layout_toLeftOf="@+id/treg"
        android:focusable="true"
        android:hint="@string/first_name"
        android:textColorHighlight="#283593"
        android:textColorHint="#283593"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/lname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fname"
        android:layout_marginStart="-143dp"
        android:layout_marginLeft="-143dp"
        android:layout_marginTop="-46dp"
        android:layout_toEndOf="@+id/treg"
        android:layout_toRightOf="@+id/treg"
        android:focusable="true"
        android:hint="@string/last_name"
        android:textColorHighlight="#283593"
        android:textColorHint="#283593"
        tools:ignore="RtlHardcoded" />
    <EditText
        android:id="@+id/uname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fname"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:focusable="true"
        android:hint="@string/user_name"
        android:textColorHighlight="#283593"
        android:textColorHint="#283593"
        tools:ignore="RtlHardcoded" />
    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/uname"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:focusable="true"
        android:hint="@string/email"
        android:textColorHighlight="#283593"
        android:textColorHint="#283593"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginEnd="-26dp"
        android:layout_marginRight="-26dp"
        android:layout_marginTop="30dp"
        android:layout_toStartOf="@+id/treg"
        android:layout_toLeftOf="@+id/treg"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#283593"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/cpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginStart="-107dp"
        android:layout_marginLeft="-107dp"
        android:layout_toEndOf="@+id/treg"
        android:layout_toRightOf="@+id/treg"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColorHint="#283593"
        tools:ignore="RtlHardcoded"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/bsend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/password"
        android:text="@string/send"
        android:layout_marginTop="30dp"/>

</RelativeLayout>