<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout
    xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height = "match_parent"
    tools:context = ".MainActivity">

    <TextView
        android:id = "@+id/tlogin"
        android:text = "Login"
        android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:textSize = "70dp"
        android:layout_marginTop = "100dp"
        android:layout_alignParentTop = "true"
        android:layout_centerHorizontal = "true" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tlogin"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="20dp"
        android:focusable="true"
        android:hint="@string/enter_email"
        android:textColorHighlight="#283593"
        android:textColorHint="#283593"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="5dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#283593"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/blogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-52dp"
        android:layout_marginRight="-52dp"
        android:layout_marginBottom="160dp"
        android:layout_toStartOf="@+id/tlogin"
        android:layout_toLeftOf="@+id/tlogin"
        android:text="@string/login"
        tools:ignore="RtlHardcoded"
        android:onClick="login"/>

    <Button
        android:id="@+id/bregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-41dp"
        android:layout_marginLeft="-41dp"
        android:layout_marginBottom="163dp"
        android:layout_toEndOf="@+id/tlogin"
        android:layout_toRightOf="@+id/tlogin"
        android:text="Register"
        android:onClick="login"/>

</RelativeLayout>